V0.1.5
bugfix - the S-C Assembler file detect routine was sometimes getting into endless loop
added 'dskserver.rb'
--explode now lets an output directory be specified by --output 

V0.1.4
bugfix - errors on case-sensitive platforms (require 'YAML'=>require'yaml')
Added support for opening URLs (e.g. dsktool.rb -c http://jamtronix.com/dsks/apshai.dsk.gz)
Added "raw" mode (doesn't convert BASIC tokens to ASCII)

V0.1.3
Added support for gzipped files (assumes .gz extension)
Added support for S-C Assembler files
Added support for opening URIs